# Grid-Computing-Framework

./: AUTHORS  README  README~  TODO  TODO~  Unsaved Document 1  get_mac.c  newclient.cpp  trial.txt  update.sh
Demo Input Files/: README  README~
FileSender/: .filesender.cpp.swp  filesender.cpp
FileTransfer/: client  client.cpp  newgui.glade  server  server.cpp
GUI/: newgui.glade
NewClient&Server/: .Protocol.swp  .clientbroadcaster.cpp.swp  .newclient.cpp.swp  .newserver.cpp.swp  .serverlistener.cpp.swp  Protocol  cs  newclient.cpp  newserver.cpp  ns  pingstats.tmp  serverlistener.cpp
TaskDistribution/: .MergeSort.pss.swp  .Server.cpp.swp  .archivegen.cpp.swp  .clientbroadcaster.cpp.swp  .ig.cpp.swp  .parser.cpp.swo  .parser.cpp.swp  .serverlistener.cpp.swp  MergeSort.pss  Server.cpp  TaskDescription  ag  archivegen.cpp  client  clientbroadcaster.cpp  config.h  da  dearchiver.cpp  ig  ig.cpp  parser.cpp  parser.h  pingstats.tmp  server  t1.tar  t1.tdd  t2.cpp  t2.tdd  t2_inp.inp  t3.tdd
XMLParser/: .PSSFormat~.swp  .inp.in.swp  .parser.cpp.swp  PSSFormat  PSSFormat (1)  PSSFormat~  inp.in  inp.in~  out.out  parser  parser.c  parser.cpp
clientgui/: Makefile  Makefile.am  Makefile.in  clientgui.glade.bak  clientgui.gladep.bak  config.h  config.status  configure  configure.in
guigui/: Makefile  Makefile.am  Makefile.in  config.h  configure  (+4 more)
guigui/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.c~  callbacks.h  guigui  interface.c.bak  interface.c~  interface.h  interface.h.bak  interface.h~  main.c  main.c~
guigui/src/.deps/: callbacks.Po
(+176 files in other folders)
